# jaxQFT

./: .gitignore  AGENTS.md  HANDOFF.md  LICENSE  NERSC.md  README.md  pyproject.toml  u1_16_16_b1p0_gf  u1_16_16_b2p0_gf  u1_16_16_b3p0_gf  u1_16_16_b4p0_gf
campaigns/paper-2-hmc-g2-scan/: PLAN.md  RUNBOOK.md
configs/phi4/: rg_coarse_eta_gaussian_L128_perlevel.toml  rg_coarse_eta_gaussian_L32_perlevel.toml  rg_coarse_eta_gaussian_L32_perlevel_debug.toml  rg_coarse_eta_gaussian_L32_perlevel_resume.toml  rg_coarse_eta_gaussian_L64_perlevel.toml  rg_coarse_eta_gaussian_fresh.toml  rg_coarse_eta_gaussian_resume.toml
data/phi4/: README.md
docs/: TODO.md
docs/notes/: Makefile  domain_decomposition_wilson_u1.md  domain_decomposition_wilson_u1.tex  gamma_conventions.tex  phi4_flow_sanity_checks_2026-04.md  phi4_multigpu_plan.md  phi4_reweighting_analysis_guidance.md  phi4_rg_checkerboard_flow.tex  phi4_rg_checkerboard_inblock_flow.tex  phi4_rg_coarse_eta_flow.tex  phi4_rg_coarse_eta_gaussian_flow.tex  phi4_rg_coarse_eta_scan_suite.md  phi4_rg_conditional_transformer_flow.tex  pion_vector_matrix_element.tex  schwinger_pion_form_factor.tex  schwinger_spectroscopy.tex  smd_ghmc.tex  two_flavor_monomial.tex  two_three_point_wilson.md
docs/phi4_sad/: sad_free.json  sad_note.out  sad_note.tex  sad_phi4.json  sad_phi4_256x128.json  sad_phi4_512x256.json  sad_phi4_64x32.json
jaxqft/: __init__.py  flows.py
jaxqft/LieGroups/: __init__.py  so3.py  su2.py  su3.py
jaxqft/core/: __init__.py  domain_decomposition.py  hamiltonian.py  hmc_sampler.py  integrators.py  measurements.py  (+2 more)
(+231 files in other folders)
