[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxqft"
version = "0.1.0"
description = "JAX transcription of core torchQFT components"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.0",
  "optax>=0.2.0",
]

[tool.setuptools.packages.find]
include = ["jaxqft*"]
